# kanban-studio

./: .dockerignore  .gitignore  Dockerfile  README.md  railway.json  render.yaml
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  db.py  kanban_seed.py  main.py  schemas.py
backend/app/static/: index.html
backend/tests/: test_ai.py  test_board_api.py  test_frontend_integration.py  test_main.py
docs/: DATABASE.md  PLAN.md  schema.json
frontend/: AGENTS.md  playwright.config.ts
frontend/src/components/: AiSidebar.tsx  AppShell.test.tsx  AppShell.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx
frontend/src/lib/: api.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  start-linux.sh  start-mac.sh  start-windows.ps1  stop-mac.sh  stop-windows.ps1
